--- a/site/cardType/cardType02.html
+++ b/site/cardType/cardType02.html
@@ -7,7 +7,7 @@
     <title>카드 유형 02</title>
     <style>
         /* fonts */
-        @import url('https://webfontworld.github.io/gmarket/GmarketSans.css');    /* 폰트 */
+        @import url('https://webfontworld.github.io/gmarket/GmarketSans.css');
 
         .nexon {
             font-family: 'GmarketSans';
@@ -77,6 +77,7 @@
             font-size: 24px;
             margin-bottom: 10px;
             margin-top: 20px;
+            position: relative;
         }
         .card__body .desc {
             font-size: 18px;
@@ -86,7 +87,9 @@
             font-weight: 300;
         }
         .card__body .btn {
-
+            position: absolute;
+            top: 0;
+            right: 0;
         }
     </style>
 </head>
@@ -101,13 +104,13 @@
             <!-- 1 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card2_1.jpg" alt="포터리">
+                    <img src="img/card2_1.jpg" alt="brand">
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">
                         Brand
-                        <span aria-hidden="true">
-                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span aria-hidden="true" class="btn">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
                                 <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
                             </svg>
@@ -121,13 +124,13 @@
             <!-- 2 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card2_2.jpg" alt="TPO">
+                    <img src="img/card2_2.jpg" alt="brand">
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">
                         Brand
-                        <span aria-hidden="true">
-                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span aria-hidden="true" class="btn">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
                                 <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
                             </svg>
@@ -141,13 +144,13 @@
             <!-- 3 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card2_3.jpg" alt="원단">
+                    <img src="img/card2_3.jpg" alt="brand">
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">
                         Brand
-                        <span aria-hidden="true">
-                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span aria-hidden="true" class="btn">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
                                 <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
                             </svg>
@@ -161,13 +164,13 @@
             <!-- 4 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card2_4.jpg" alt="원단">
+                    <img src="img/card2_4.jpg" alt="brand">
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">
                         Brand
-                        <span aria-hidden="true">
-                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span aria-hidden="true" class="btn">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
                                 <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
                             </svg>
@@ -184,13 +187,13 @@
             <!-- 2-1 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card2_5.jpg" alt="포터리">
+                    <img src="img/card2_5.jpg" alt="brand">
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">
                         Brand
-                        <span aria-hidden="true">
-                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span aria-hidden="true" class="btn">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
                                 <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
                             </svg>
@@ -204,13 +207,13 @@
             <!-- 2-2 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card2_6.jpg" alt="TPO">
+                    <img src="img/card2_6.jpg" alt="brand">
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">
                         Brand
-                        <span aria-hidden="true">
-                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span aria-hidden="true" class="btn">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
                                 <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
                             </svg>
@@ -224,13 +227,13 @@
             <!-- 2-3 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card2_7.jpg" alt="원단">
+                    <img src="img/card2_7.jpg" alt="brand">
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">
                         Brand
-                        <span aria-hidden="true">
-                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span aria-hidden="true" class="btn">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
                                 <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
                             </svg>
@@ -244,13 +247,13 @@
             <!-- 2-4 -->
             <article class="card">
                 <figure class="card__header">
-                    <img src="img/card2_8.jpg" alt="원단">
+                    <img src="img/card2_8.jpg" alt="brand">
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">
                         Brand
-                        <span aria-hidden="true">
-                            <svg width="24" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <span aria-hidden="true" class="btn">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <rect width="24" height="24" rx="5" fill="#8BCEFF"/>
                                 <path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z" fill="white"/>
                             </svg>
