--- a/javascript/study/cardType01.html
+++ b/javascript/study/cardType01.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>카드 타입 사이트 만들기</title>
+    <title>카드 타입 사이트 만들기 01</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/dracula.css">
 </head>
 <body>
     <main id="main">
         <div class="document">
-            <h2 class="t_tit">카드 타입 사이트</h2>
+            <h2 class="t_tit">카드 타입 사이트 01</h2>
             <p class="t_desc2">
                 사이트에 기초적인 구조를 가진 카드 타입 사이트를 만들어 봅시다.
             </p>
@@ -36,7 +37,8 @@
                 &lt;div class="card__body">
                     &lt;h3 class="tit">포터리&lt;/h3>
                     &lt;p class="desc">
-                        포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다. 과거의 유니폼은 한 집단에 소속된 특징을 보여주는 옷이라면, 현대의 유니폼은 개인의 라이프스타일입니다.
+                        포터리는 현대사회에 알맞는 유니폼을 제안하고자 합니다. 과거의 유니폼은 한 집단에 소속된
+                        특징을 보여주는 옷이라면, 현대의 유니폼은 개인의 라이프스타일입니다.
                     &lt;/p>
                     &lt;a class="btn" href="/">더 자세히 보기&lt;/a>
                 &lt;/div>
@@ -48,7 +50,8 @@
                 &lt;div class="card__body">
                     &lt;h3 class="tit">TPO&lt;/h3>
                     &lt;p class="desc">
-                        우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고, 정말 그 상황에 필요한 것일지 생각합니다. 옷이 그 외의 상황입니다.
+                        우리는 옷을 만들기 위해 최선의 노력을 다합니다. 특정한 상황에 필요한 제품을 구상하고,
+                        정말 그 상황에 필요한 것일지 생각합니다. 옷이 그 외의 상황입니다.
                     &lt;/p>
                     &lt;a class="btn" href="/">더 자세히 보기&lt;/a>
                 &lt;/div>
@@ -60,7 +63,8 @@
                 &lt;div class="card__body">
                     &lt;h3 class="tit">원단&lt;/h3>
                     &lt;p class="desc">
-                        유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는 원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.
+                        유니폼은 계절감, 내구성, 그리고 각각의 형태의 본질을 담아야 합니다. 유니폼에 맞는
+                        원단이 선택되면 수차례 옷을 만들어냅니다. 일정 기간을 두고 옷을 관찰합니다.
                     &lt;/p>
                     &lt;a class="btn" href="/">더 자세히 보기&lt;/a>
                 &lt;/div>
@@ -77,7 +81,7 @@
             </p>
             <div class="t_code">
 <pre><code>    /* fonts */
-    @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');    /* 폰트 */
+    @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
 
     .nexon {
         font-family: "NexonLv1Gothic";
@@ -150,10 +154,15 @@
 
     }
 </code></pre>
+                <div class="t_link">
+                    <a href="https://github.com/KDB6/ck/blob/main/site/cardType/cardType01.html" target="_blank">코드 원본 보기</a>
+                </div>
             </div>
 
+            <br><br>
+
             <h3 class="t_tit2">결과물</h3>
-            <div class="t_iframe" style="min-height: 900px; padding-top: 0;">
+            <div class="t_iframe" style="min-height: 920px; padding-top: 0;">
                 <iframe src="https://kdb6.github.io/ck/site/cardType/cardType01.html" frameborder="0"></iframe>
             </div>
     
