--- a/site/cardType/cardType02.html
+++ b/site/cardType/cardType02.html
@@ -7,7 +7,7 @@
     <title>카드 유형 02</title>
     <style>
         /* fonts */
-        @import url('https://webfontworld.github.io/gmarket/GmarketSans.css');
+        @import url('https://webfontworld.github.io/gmarket/GmarketSans.css');    /* 폰트 */
 
         .nexon {
             font-family: 'GmarketSans';
