--- a/test.html
+++ b/test.html
@@ -1,2 +1,204 @@
-quizConfirm.forEach((btn, num) => {
-    btn.addEvent
+&lt;section id="cardType" class="card__wrap nexon section">
+    &lt;h2>Steady Every Wear&lt;/h2>
+    &lt;p>
+        지속적인 가치를 지닌 라이프 스타일 제품을 만들기 위해 노력합니다.&lt;br>
+        편안하고 자연스러운 디자인으로 일상 생활에 손이 자주 가는 제품을 지향합니다.
+    &lt;/p>
+    &lt;div class="card__inner container">
+        &lt;!-- 1 -->
+        &lt;article class="card">
+            &lt;figure class="card__header">
+                &lt;img src="img/card2_1.jpg" alt="brand">
+            &lt;/figure>
+            &lt;div class="card__body">
+                &lt;h3 class="tit">
+                    Brand
+                    &lt;span aria-hidden="true" class="btn">
+                        &lt;svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            &lt;rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                            &lt;path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.
+                                     0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.
+                                     31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.
+                                     9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z"
+                                     fill="white"/>
+                        &lt;/svg>
+                    &lt;/span>
+                &lt;/h3>
+                &lt;p class="desc">
+                    디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
+                &lt;/p>
+            &lt;/div>
+        &lt;/article>
+        &lt;!-- 2 -->
+        &lt;article class="card">
+            &lt;figure class="card__header">
+                &lt;img src="img/card2_2.jpg" alt="brand">
+            &lt;/figure>
+            &lt;div class="card__body">
+                &lt;h3 class="tit">
+                    Brand
+                    &lt;span aria-hidden="true" class="btn">
+                        &lt;svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            &lt;rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                            &lt;path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.
+                                     0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.
+                                     31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.
+                                     9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z"
+                                     fill="white"/>
+                        &lt;/svg>
+                    &lt;/span>
+                &lt;/h3>
+                &lt;p class="desc">
+                    디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
+                &lt;/p>
+            &lt;/div>
+        &lt;/article>
+        &lt;!-- 3 -->
+        &lt;article class="card">
+            &lt;figure class="card__header">
+                &lt;img src="img/card2_3.jpg" alt="brand">
+            &lt;/figure>
+            &lt;div class="card__body">
+                &lt;h3 class="tit">
+                    Brand
+                    &lt;span aria-hidden="true" class="btn">
+                        &lt;svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            &lt;rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                            &lt;path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.
+                                     0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.
+                                     31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.
+                                     9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z"
+                                     fill="white"/>
+                        &lt;/svg>
+                    &lt;/span>
+                &lt;/h3>
+                &lt;p class="desc">
+                    디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
+                &lt;/p>
+            &lt;/div>
+        &lt;/article>
+        &lt;!-- 4 -->
+        &lt;article class="card">
+            &lt;figure class="card__header">
+                &lt;img src="img/card2_4.jpg" alt="brand">
+            &lt;/figure>
+            &lt;div class="card__body">
+                &lt;h3 class="tit">
+                    Brand
+                    &lt;span aria-hidden="true" class="btn">
+                        &lt;svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            &lt;rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                            &lt;path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.
+                                     0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.
+                                     31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.
+                                     9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z"
+                                     fill="white"/>
+                        &lt;/svg>
+                    &lt;/span>
+                &lt;/h3>
+                &lt;p class="desc">
+                    디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
+                &lt;/p>
+            &lt;/div>
+        &lt;/article>
+    &lt;/div>
+
+    &lt;div class="card__inner container02">
+        &lt;!-- 2-1 -->
+        &lt;article class="card">
+            &lt;figure class="card__header">
+                &lt;img src="img/card2_5.jpg" alt="brand">
+            &lt;/figure>
+            &lt;div class="card__body">
+                &lt;h3 class="tit">
+                    Brand
+                    &lt;span aria-hidden="true" class="btn">
+                        &lt;svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            &lt;rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                            &lt;path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.
+                                     0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.
+                                     31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.
+                                     9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z"
+                                     fill="white"/>
+                        &lt;/svg>
+                    &lt;/span>
+                &lt;/h3>
+                &lt;p class="desc">
+                    디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
+                &lt;/p>
+            &lt;/div>
+        &lt;/article>
+        &lt;!-- 2-2 -->
+        &lt;article class="card">
+            &lt;figure class="card__header">
+                &lt;img src="img/card2_6.jpg" alt="brand">
+            &lt;/figure>
+            &lt;div class="card__body">
+                &lt;h3 class="tit">
+                    Brand
+                    &lt;span aria-hidden="true" class="btn">
+                        &lt;svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            &lt;rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                            &lt;path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.
+                                     0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.
+                                     31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.
+                                     9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z"
+                                     fill="white"/>
+                        &lt;/svg>
+                    &lt;/span>
+                &lt;/h3>
+                &lt;p class="desc">
+                    디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
+                &lt;/p>
+            &lt;/div>
+        &lt;/article>
+        &lt;!-- 2-3 -->
+        &lt;article class="card">
+            &lt;figure class="card__header">
+                &lt;img src="img/card2_7.jpg" alt="brand">
+            &lt;/figure>
+            &lt;div class="card__body">
+                &lt;h3 class="tit">
+                    Brand
+                    &lt;span aria-hidden="true" class="btn">
+                        &lt;svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            &lt;rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                            &lt;path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.
+                                     0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.
+                                     31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.
+                                     9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z"
+                                     fill="white"/>
+                        &lt;/svg>
+                    &lt;/span>
+                &lt;/h3>
+                &lt;p class="desc">
+                    디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
+                &lt;/p>
+            &lt;/div>
+        &lt;/article>
+        &lt;!-- 2-4 -->
+        &lt;article class="card">
+            &lt;figure class="card__header">
+                &lt;img src="img/card2_8.jpg" alt="brand">
+            &lt;/figure>
+            &lt;div class="card__body">
+                &lt;h3 class="tit">
+                    Brand
+                    &lt;span aria-hidden="true" class="btn">
+                        &lt;svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            &lt;rect width="24" height="24" rx="5" fill="#8BCEFF"/>
+                            &lt;path d="M4 11C3.44772 11 3 11.4477 3 12C3 12.5523 3.44772 13 4 13L4 11ZM20.7071 12.7071C21.0976 12.3166 21.
+                                     0976 11.6834 20.7071 11.2929L14.3431 4.92893C13.9526 4.53841 13.3195 4.53841 12.9289 4.92893C12.5384 5.
+                                     31946 12.5384 5.95262 12.9289 6.34315L18.5858 12L12.9289 17.6569C12.5384 18.0474 12.5384 18.6805 12.
+                                     9289 19.0711C13.3195 19.4616 13.9526 19.4616 14.3431 19.0711L20.7071 12.7071ZM4 13L20 13L20 11L4 11L4 13Z"
+                                     fill="white"/>
+                        &lt;/svg>
+                    &lt;/span>
+                &lt;/h3>
+                &lt;p class="desc">
+                    디자인뿐만 아니라 미래 세대를 위한 지속 가능성을 고려하며 컬렉션을 제작합니다.
+                &lt;/p>
+            &lt;/div>
+        &lt;/article>
+    &lt;/div>
+&lt;/section>
