--- a/css/index.html
+++ b/css/index.html
@@ -6301,9 +6301,9 @@
                                                 <td></td>
                                             </tr>
                                             <tr>
-                                                <td></td>
-                                                <td class="left"></td>
-                                                <td class="left"></td>
+                                                <td>[name~="value"]</td>
+                                                <td class="left">a[href~="#web"]</td>
+                                                <td class="left">href 태그가 유일하게 #web이거나 여러 href 태그 중 하나가 #web인 a 요소</td>
                                                 <td>
                                                     <span class="material-symbols-outlined">star</span>
                                                     <span class="material-symbols-outlined">star</span>
@@ -6314,9 +6314,9 @@
                                                 <td></td>
                                             </tr>
                                             <tr>
-                                                <td></td>
-                                                <td class="left"></td>
-                                                <td class="left"></td>
+                                                <td>[name|="value"]</td>
+                                                <td class="left">a[href|="#web"]</td>
+                                                <td class="left">href 태그가 #web이거나 #web로 시작하는 a 요소</td>
                                                 <td>
                                                     <span class="material-symbols-outlined">star</span>
                                                     <span class="material-symbols-outlined">star</span>
@@ -6327,9 +6327,9 @@
                                                 <td></td>
                                             </tr>
                                             <tr>
-                                                <td></td>
-                                                <td class="left"></td>
-                                                <td class="left"></td>
+                                                <td>[name^="value"]</td>
+                                                <td class="left">a[href^="#web"]</td>
+                                                <td class="left">href 태그가 철자 #web으로 시작하는 a 요소</td>
                                                 <td>
                                                     <span class="material-symbols-outlined">star</span>
                                                     <span class="material-symbols-outlined">star</span>
@@ -6340,9 +6340,9 @@
                                                 <td></td>
                                             </tr>
                                             <tr>
-                                                <td></td>
-                                                <td class="left"></td>
-                                                <td class="left"></td>
+                                                <td>[name$="value"]</td>
+                                                <td class="left">a[href$="#web"]</td>
+                                                <td class="left">href 태그가 철자 #web으로 끝나는 a 요소</td>
                                                 <td>
                                                     <span class="material-symbols-outlined">star</span>
                                                     <span class="material-symbols-outlined">star</span>
@@ -6353,9 +6353,9 @@
                                                 <td></td>
                                             </tr>
                                             <tr>
-                                                <td></td>
-                                                <td class="left"></td>
-                                                <td class="left"></td>
+                                                <td>[name*="value"]</td>
+                                                <td class="left">a[href*="#web"]</td>
+                                                <td class="left">href 태그가 철자 #web이 포함되어 있는 a 요소</td>
                                                 <td>
                                                     <span class="material-symbols-outlined">star</span>
                                                     <span class="material-symbols-outlined">star</span>
@@ -6715,7 +6715,7 @@
                     </div>
 
                     <!-- subCont3 -->
-                    <div class="subCont3">
+                    <!-- <div class="subCont3">
                         <div>
                             <div class="table">
                                 <table>
@@ -6757,7 +6757,7 @@
                                 </table>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <!-- //subContents -->
             </div>
