--- a/css/index.html
+++ b/css/index.html
@@ -6277,7 +6277,7 @@
                                                 <td rowspan="7">속성 선택자</td>
                                                 <td>[name]</td>
                                                 <td class="left">a[href]</td>
-                                                <td class="left"></td>
+                                                <td class="left">href 명을 가진 a 태그 요소</td>
                                                 <td>
                                                     <span class="material-symbols-outlined">star</span>
                                                     <span class="material-symbols-outlined">star</span>
@@ -6290,7 +6290,7 @@
                                             <tr>
                                                 <td>[name="value"]</td>
                                                 <td class="left">a[href="#web"]</td>
-                                                <td class="left"></td>
+                                                <td class="left">href 명이 유일하게 #web인 a 태그 요소</td>
                                                 <td>
                                                     <span class="material-symbols-outlined">star</span>
                                                     <span class="material-symbols-outlined">star</span>
