--- a/site/cardType/cardType03.html
+++ b/site/cardType/cardType03.html
@@ -44,7 +44,7 @@
             background-color: #fff;
         }
         .section {
-            padding: 220px 0px;
+            padding: 120px 0px;
         }
         .section > h2 {
             font-size: 50px;
@@ -76,13 +76,13 @@
         .right {
             text-align: right;
             position: absolute;
-            right: 66px;
+            right: 73px;
         }
         .right2 {
             text-align: right;
             position: absolute;
-            right: 66px;
-            bottom: 19px;
+            right: 71px;
+            bottom: 20px;
         }
         .card__inner {
             display: flex;
@@ -168,10 +168,20 @@
             bottom: 19px;
             border-radius: 5px;
         }
-        .card__inner .card2 .more {
+        .card__inner .card2 .more2 {
             width: 35px;
             height: 35px;
-            background-image: url(img/pro01.jpg);
+            background-image: url(img/pro02.jpg);
+            display: block;
+            position: absolute;
+            right: 25px;
+            bottom: 19px;
+            border-radius: 5px;
+        }
+        .card__inner .card .more3 {
+            width: 35px;
+            height: 35px;
+            background-image: url(img/pro03.jpg);
             display: block;
             position: absolute;
             right: 25px;
@@ -197,7 +207,7 @@
                 <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures.</p>
                 <p class="roboto400 right">Art</p>
                 <p class="roboto300 right2">6Resources</p>
-                <a href="#" class="more"><span class="ir">pro</span></a>
+                <a href="#" class="more2"><span class="ir">pro</span></a>
             </article>
             <article class="card">
                 <img src="img/art03.jpg" alt="art">
@@ -205,7 +215,7 @@
                 <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures.</p>
                 <p class="roboto400 right">Art</p>
                 <p class="roboto300 right2">6Resources</p>
-                <a href="#" class="more"><span class="ir">pro</span></a>
+                <a href="#" class="more3"><span class="ir">pro</span></a>
             </article>
         </div>
         
