--- a/site/cardType/cardType03.html
+++ b/site/cardType/cardType03.html
@@ -73,6 +73,9 @@
         }
 
         /* cardType03 */
+        .line {
+            border: 0.5px solid #f5f5f5;
+        }
         .right {
             text-align: right;
             position: absolute;
@@ -95,16 +98,15 @@
             position: relative;
             background-color: #fff;
             padding: 26px 26px;
+            border-right: 1px solid #eeeeee;
         }
         .card__inner .card2 {
-            width: 334.5px;
+            width: 331px;
             height: 470px;
             position: relative;
             background-color: #fff;
             padding: 26px 26px;
-        }
-        .card__inner .card:first-child {
-            margin-bottom: 50px;
+            border-right: 1px solid #eeeeee;
         }
         .card__inner .card img {
             margin-bottom: 19px;
@@ -193,7 +195,7 @@
 <body>
     <section id="cardType03" class="card__wrap Roboto400 section blue">
         <div class="card__inner container">
-            <article class="card">
+            <article class="card ">
                 <img src="img/art01.jpg" alt="art">
                 <h2 class="roboto400 tit">Art is a diverse range of human activity</h2>
                 <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures.</p>
@@ -201,7 +203,7 @@
                 <p class="roboto300 right2">6Resources</p>
                 <a href="#" class="more"><span class="ir">pro</span></a>
             </article>
-            <article class="card2">
+            <article class="card2 ">
                 <img src="img/art02.jpg" alt="art">
                 <h2 class="roboto400 tit">Art is a diverse range of human activity</h2>
                 <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures.</p>
@@ -209,7 +211,7 @@
                 <p class="roboto300 right2">6Resources</p>
                 <a href="#" class="more2"><span class="ir">pro</span></a>
             </article>
-            <article class="card">
+            <article class="card ">
                 <img src="img/art03.jpg" alt="art">
                 <h2 class="roboto400 tit">Art is a diverse range of human activity</h2>
                 <p class="roboto300 desc">There is no generally agreed definition of what constitutes art, and its interpretation has varied greatly throughout history and across cultures.</p>
